infra/comments-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: localhost:5000/comments-image:latest
          ports:
            - containerPort: 4001
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - port: 4001
      targetPort: 4001
  type: LoadBalancer
