infra/event-bus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: localhost:5000/event-bus-image:latest
          ports:
            - containerPort: 4005
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
    - port: 4005
      # protocol: TCP
      targetPort: 4005
  type: LoadBalancer
