infra/moderation-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: localhost:5000/moderation-image:latest
          ports:
            - containerPort: 4003
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - port: 4003
      targetPort: 4003
  type: LoadBalancer
