infra/post-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: localhost:5000/posts-image:latest
          ports:
            - containerPort: 4000
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - port: 4000
      # protocol: TCP
      targetPort: 4000
  type: LoadBalancer
