infra/query-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: localhost:5000/query-image:latest
          ports:
            - containerPort: 4002
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - port: 4002
      # protocol: TCP
      targetPort: 4002
  type: LoadBalancer
